--- a/index.html
+++ b/index.html
@@ -2,12 +2,33 @@
 <html>
   <head>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/p5.js"></script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+<script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/7.14.2/firebase-database.js"></script>
+
+<!-- TODO: Add SDKs for Firebase products that you want to use
+     https://firebase.google.com/docs/web/setup#available-libraries -->
+
+<script>
+  // Your web app's Firebase configuration
+  var firebaseConfig = {
+    apiKey: "AIzaSyCQYvHbc3b3R8fxLzJyW7p8WlOpRF3lA1k",
+    authDomain: "car-racing-game-aa82b.firebaseapp.com",
+    databaseURL: "https://car-racing-game-aa82b.firebaseio.com",
+    projectId: "car-racing-game-aa82b",
+    storageBucket: "car-racing-game-aa82b.appspot.com",
+    messagingSenderId: "587767445998",
+    appId: "1:587767445998:web:5c0ea162458918e04b76ff"
+  };
+  // Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.dom.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.8.0/addons/p5.sound.min.js"></script>
 <script src="./p5.play.js"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8" />
-
+  <script src="form.js"></script>
   </head>
   <body>
       <script src="sketch.js"></script>
